<resources>
    <string name="app_name">Login</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="or">or</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="home_activity_name">Run</string>
    <string name="profile_activity_name">Profile</string>
    <string name="health_tips_activity_name">Health Tips</string>
    <string name="tips_activity_name">Tips</string>
    <string name="dashboard_activity_name">Dashboard</string>
    <string name="complete_form_activity_name">Sign up</string>
    <string name="full_name">Full name</string>
    <string name="age">Age</string>
    <string name="height">Height (in feet inches)</string>
    <string name="weight">Weight (in kg)</string>
    <string name="neck">Neck size (in inches)</string>
    <string name="waist">Waist size (int inches)</string>
    <string name="ranking_activity_name">Ranking</string>
</resources>
