<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/completeSignUpFormBG"
    tools:context="com.the_spartan.run.login.SignUpFragment">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <EditText
                android:id="@+id/et_full_name"
                android:layout_width="300dp"
                android:layout_height="56dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="92dp"
                android:background="@drawable/bubble_for_complete_signup"
                android:gravity="center_vertical"
                android:hint="@string/full_name"
                android:paddingEnd="32dp"
                android:paddingStart="32dp"
                android:textColor="#ffffff"
                android:textColorHint="#8effffff" />

            <EditText
                android:id="@+id/et_age"
                android:layout_width="300dp"
                android:layout_height="56dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:background="@drawable/bubble_for_complete_signup"
                android:gravity="center_vertical"
                android:hint="@string/age"
                android:paddingEnd="32dp"
                android:paddingStart="32dp"
                android:textColor="#ffffff"
                android:textColorHint="#8effffff" />

            <EditText
                android:id="@+id/et_height"
                android:layout_width="300dp"
                android:layout_height="56dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:background="@drawable/bubble_for_complete_signup"
                android:gravity="center_vertical"
                android:hint="@string/height"
                android:paddingEnd="32dp"
                android:paddingStart="32dp"
                android:textColor="#ffffff"
                android:textColorHint="#8effffff" />

            <EditText
                android:id="@+id/et_weight"
                android:layout_width="300dp"
                android:layout_height="56dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:background="@drawable/bubble_for_complete_signup"
                android:gravity="center_vertical"
                android:hint="@string/weight"
                android:paddingEnd="32dp"
                android:paddingStart="32dp"
                android:textColor="#ffffff"
                android:textColorHint="#8effffff" />


            <EditText
                android:id="@+id/et_waist"
                android:layout_width="300dp"
                android:layout_height="56dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:background="@drawable/bubble_for_complete_signup"
                android:gravity="center_vertical"
                android:hint="@string/waist"
                android:paddingEnd="32dp"
                android:paddingStart="32dp"
                android:textColor="#ffffff"
                android:textColorHint="#8effffff" />


            <EditText
                android:id="@+id/et_neck"
                android:layout_width="300dp"
                android:layout_height="56dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:background="@drawable/bubble_for_complete_signup"
                android:gravity="center_vertical"
                android:hint="@string/neck"
                android:paddingEnd="32dp"
                android:paddingStart="32dp"
                android:textColor="#ffffff"
                android:textColorHint="#8effffff" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_submit_full_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/button_shape"
                    android:text="Submit"
                    android:textColor="@android:color/white"
                    android:textSize="18dp" />
            </RelativeLayout>

        </LinearLayout>



</ScrollView>

